# ZFS-Webmanager-Agent

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  TEST_REPORT.md  api.json  features.json  openapi.yaml  run_tests.sh  settings.json
agent_docs/: cli_reference.md  commands.md  structure.md  testing.md  workflow.md
archive/: auth.rs  config.rs  main.rs  models.rs  zfs.rs
archive/handlers/: datasets.rs  mod.rs  snapshots.rs
features/: #00_Refactoring.md  #01_APIFramework.md  #02_Auth.md  #03_ZFSEngine.md  #07_PoolVdevOps.md  #08_PoolProperties.md  #09_PoolHistory.md  #10_ClearPoolErrors.md  #11_DatasetProperties.md  #13_DatasetEncryption.md  #14_DatasetBookmarks.md  #17_SnapshotHolds.md  #18_SnapshotRecursive.md  #19_SnapshotDiff.md  #20_Replication.md  #21_HealthMonitoring.md  #22_FeatureDiscovery.md  #23_SafetyLock.md  #XY_FeatureName.md
features/archive/: #04_PoolCRUD.md  #05_PoolScrub.md  #06_PoolImportExport.md  #10_DatasetCRUD.md  #12_DatasetRename.md  #15_SnapshotCRUD.md  #16_ClonePromoteRollback.md
src/: auth.rs  handlers.rs  main.rs  models.rs  safety.rs  task_manager.rs  utils.rs  zfs_management.rs
src/handlers/: datasets.rs  docs.rs  mod.rs  pools.rs  replication.rs  safety.rs  scrub.rs  snapshots.rs  utility.rs  vdev.rs
src/zfs_management/: datasets.rs  ffi.rs  helpers.rs  manager.rs  mod.rs  pools.rs  replication.rs  scrub.rs  snapshots.rs  tests.rs  types.rs  vdev.rs
templates/: docs.html  features.html
tests/: STRESS_TESTS.md  api_auth.rs  api_datasets.rs  api_health.rs  api_pools.rs  api_snapshots.rs  cleanup_tests.sh  zfs_parcour.sh  zfs_stress_a_long.sh  zfs_stress_a_short.sh  zfs_stress_b_long.sh  zfs_stress_b_short.sh
zfs_manager/: README  webmanager.py  zfs_interactive_ui.py
zfs_manager/_backup/: manage_zfs.py  (+1 more)
(+4 files in other folders)
