[package]
name = "zfs_webmanager_agent"
version = "0.5.7"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
warp = { version = "0.4.2", features = ["server"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
rand = "0.9.2"
libzetta = "0.5.0"
libzfs = "0.6.16"
libzetta-zfs-core-sys = "0.5.2"  # FFI bindings for lzc_clone, lzc_promote
libc = "0.2"                      # For CString FFI
dirs = "6.0"
